# LanguageBuddy

./: .gitignore  buddy_server.py  main.py  pyproject.toml  test.py
languagebuddy/: chat.py  prompt_manager.py  server.py  settings.py
